Change app name and improve ui

--- a/OsmAnd-telegram/res/values-gl/strings.xml
+++ b/OsmAnd-telegram/res/values-gl/strings.xml
@@ -18,8 +18,8 @@
 	<string name="add_device">Engadir dispositivo</string>
 	<string name="share_location_as">Compartillar ubicación coma</string>
 	<string name="live_now_description">Contactos e grupos que están a compartilla-la súa ubicación para vostede.</string>
-	<string name="logout_from_osmand_telegram_descr">Está na certeza de que desexa desconectarse do Telegram OsmAnd para non poder compartilla-la ubicación ou olla-la ubicación doutros\?</string>
-	<string name="logout_from_osmand_telegram">Pecha-la sesión do Telegram OsmAnd\?</string>
+	<string name="logout_from_osmand_telegram_descr">Está na certeza de que desexa desconectarse do Tracker OsmAnd para non poder compartilla-la ubicación ou olla-la ubicación doutros\?</string>
+	<string name="logout_from_osmand_telegram">Pecha-la sesión do Tracker OsmAnd\?</string>
 	<string name="shared_string_name">Nome</string>
 	<string name="by_distance">Pola distancia</string>
 	<string name="by_name">Polo nome</string>
@@ -88,12 +88,12 @@
 	<string name="initializing">Estase a iniciar</string>
 	<string name="searching_for_gps">Estase a posicionar…</string>
 	<string name="connecting_to_the_internet">Estase a conectar á Internet</string>
-	<string name="battery_optimization_description">Desactiva-la optimización da batería para o OsmAnd Telegram de xeito que non se desconecte de xeito súbito cando esté no segundo plano.</string>
+	<string name="battery_optimization_description">Desactiva-la optimización da batería para o OsmAnd Tracker de xeito que non se desconecte de xeito súbito cando esté no segundo plano.</string>
 	<string name="logout_no_internet_msg">Conéctese á Internet para pecha-la sesión no Telegram de xeito correcto.</string>
 	<string name="disconnect_from_telegram_desc">Para revoga-lo acceso á ubicación compartillada. Abra o Telegram, vaia cara ós «Axustes → Privacidade e Seguranza → Sesións» e peche a sesión do OsmAnd Telegram.</string>
 	<string name="disconnect_from_telegram">De que xeito desactiva-la «Ubicación compartillada do OsmAnd» dende o Telegram</string>
 	<string name="logout_help_desc">De que xeito desactiva-la «Ubicación compartillada do OsmAnd» dende o Telegram</string>
-	<string name="osmand_connect_desc">Escolla a versión do OsmAnd na cal o «OsmAnd Telegram» empregará para amosa-las ubicacións.</string>
+	<string name="osmand_connect_desc">Escolla a versión do OsmAnd na cal o «OsmAnd Tracker» empregará para amosa-las ubicacións.</string>
 	<string name="osmand_connect">Conecta-lo OsmAnd</string>
 	<string name="location_history_desc">Agocha-los contactos que non se moveron nun tempo determinado.</string>
 	<string name="stale_location_desc">A última vez que un contacto se moveu.</string>
@@ -116,7 +116,7 @@
 	<string name="my_location_search_hint">Procurar: Grupo ou contacto</string>
 	<string name="start_location_sharing">Compartillar ubicación</string>
 	<string name="show_on_map">Amosar no mapa</string>
-	<string name="app_name">OsmAnd Telegram</string>
+	<string name="app_name">OsmAnd Online GPS Tracker</string>
 	<string name="phone_number_title">Número do teléfono móbil</string>
 	<string name="phone_number_descr">Número do teléfono móbil no formato internacional</string>
 	<string name="shared_string_password">Contrasinal</string>
@@ -138,11 +138,11 @@
 	<string name="gps_not_available">Activar «Ubicación» nos axustes do sistema</string>
 	<string name="location_service_no_gps_available">Escolla un dos fornecedores da ubicación para compartilla-la súa ubicación.</string>
 	<string name="osmand_service">Modo no segundo plano</string>
-	<string name="osmand_service_descr">O OsmAnd Telegram execútase no modo en segundo plano ca pantalla apagada.</string>
+	<string name="osmand_service_descr">O OsmAnd Tracker execútase no modo en segundo plano ca pantalla apagada.</string>
 	<string name="shared_string_distance">Distancia</string>
 	<string name="share_location">Compartillar ubicación</string>
 	<string name="sharing_location">Estase a compartilla-la ubicación</string>
-	<string name="process_service">Servizo do OsmAnd Telegram</string>
+	<string name="process_service">Servizo do OsmAnd Tracker</string>
 	<string name="osmand_logo">Logotipo do OsmAnd</string>
 	<string name="install_osmand_dialog_message">Precísase instalar primeiro a versión de balde ou de pagamento do OsmAnd</string>
 	<string name="install_osmand">Instala-lo OsmAnd</string>
@@ -185,6 +185,5 @@
     <string name="open_in_osmand">Abrir no OsmAnd</string>
     <string name="end_date">Data de finalización</string>
     <string name="start_date">Data de inicio</string>
-    <string name="timeline_description">Activar o monitoramento para recompilar datos de movemento no segundo plano.</string>
     <string name="timeline">Liña do tempo</string>
 </resources>
