--- a/OsmAnd-telegram/res/values-ast/strings.xml
+++ b/OsmAnd-telegram/res/values-ast/strings.xml
@@ -42,7 +42,6 @@
     <string name="monitoring_is_disabled">La supervisión ta desactivada</string>
     <string name="end_date">Data de fin</string>
     <string name="start_date">Data d\'aniciu</string>
-    <string name="timeline_description">Activa la supervisión pa recoyer en segundu planu los datos de la movición.</string>
     <string name="send_location_as">Unviar l\'allugamientu como</string>
     <string name="send_location_as_descr">Escueyi cómo van vese los mensaxes col to allugamientu.</string>
     <string name="shared_string_text">Testu</string>
@@ -70,8 +69,8 @@
     <string name="no_internet_connection">Nun hai conexón a internet</string>
     <string name="add_device">Amestar un preséu</string>
     <string name="live_now_description">Contautos y grupos que tán compartiendo l\'allugamientu contigo.</string>
-    <string name="logout_from_osmand_telegram_descr">¿De xuru que quies zarrar sesión n\'OsmAnd Telegram pa que nun pueas compartir l\'allugamientu nin ver el d\'otros\?</string>
-    <string name="logout_from_osmand_telegram">¿Zarrar la sesión d\'OsmAnd Telegram\?</string>
+    <string name="logout_from_osmand_telegram_descr">¿De xuru que quies zarrar sesión n\'OsmAnd Tracker pa que nun pueas compartir l\'allugamientu nin ver el d\'otros\?</string>
+    <string name="logout_from_osmand_telegram">¿Zarrar la sesión d\'OsmAnd Tracker\?</string>
     <string name="by_distance">pola distancia</string>
     <string name="by_name">pol nome</string>
     <string name="by_group">pol grupu</string>
@@ -81,13 +80,13 @@
     <string name="disable_all_sharing">Desactivar toles comparticiones</string>
     <string name="turn_off_all">Desactivar too</string>
     <string name="shared_string_group">Grupu</string>
-    <string name="disconnect_from_telegram_desc">Pa revocar l\'accesu a la compartición del allugamientu. Abri Telegram, vete a Axustes → Privacidá y seguranza → Sesiones y zarra la sesión d\'OsmAnd Telegram.</string>
+    <string name="disconnect_from_telegram_desc">Pa revocar l\'accesu a la compartición del allugamientu. Abri Telegram, vete a Axustes → Privacidá y seguranza → Sesiones y zarra la sesión d\'OsmAnd Tracker.</string>
     <string name="disconnect_from_telegram">Cómo desactivar la compartición del allugamientu con OsmAnd dende Telegram</string>
     <string name="logout_help_desc">Cómo desactivar la compartición del allugamientu con OsmAnd dende Telegram</string>
     <string name="connected_account">Cuenta coneutada</string>
     <string name="shared_string_account">Cuenta</string>
     <string name="in_time">en %1$s</string>
-    <string name="osmand_connect_desc">Escueyi la versión d\'OsmAnd qu\'OsmAnd Telegram va usar p\'amosar les posiciones.</string>
+    <string name="osmand_connect_desc">Escueyi la versión d\'OsmAnd qu\'OsmAnd Tracker va usar p\'amosar les posiciones.</string>
     <string name="osmand_connect">Conexón a OsmAnd</string>
     <string name="location_history_desc">Anubre los contautos que nun se movieren nel tiempu apurríu.</string>
     <string name="location_history">Historial d\'allugamientos</string>
@@ -116,7 +115,7 @@
     <string name="visible_time_for_all">Visibilidá xeneral demientres</string>
     <string name="set_time">Afitamientu del tiempu</string>
     <string name="location_sharing_description">Esbilla los contautos y grupos colos que quies compartir el to allugamientu.</string>
-    <string name="app_name">OsmAnd Telegram</string>
+    <string name="app_name">OsmAnd Online GPS Tracker</string>
     <string name="phone_number_title">Númberu telefónicu</string>
     <string name="phone_number_descr">Númberu telefónicu nel formatu internacional</string>
     <string name="shared_string_password">Contraseña</string>
@@ -128,10 +127,10 @@
     <string name="gps_network_not_enabled">¿Activar «Allugamientu»\?</string>
     <string name="not_logged_in">Nun aniciesti sesión</string>
     <string name="gps_not_available">Activa «Allugamientu» nos axustes del sistema</string>
-    <string name="osmand_service_descr">OsmAnd Telegram execútase en segundu planu cola pantalla apagada.</string>
+    <string name="osmand_service_descr">OsmAnd Tracker execútase en segundu planu cola pantalla apagada.</string>
     <string name="shared_string_distance">Distancia</string>
     <string name="sharing_location">Compartiendo l\'allugamientu</string>
-    <string name="process_service">Serviciu d\'OsmAnd Telegram</string>
+    <string name="process_service">Serviciu d\'OsmAnd Tracker</string>
     <string name="osmand_logo">Logu d\'OsmAnd</string>
     <string name="install_osmand_dialog_message">Primero precises instalar la versión de baldre o de pagu d\'OsmAnd</string>
     <string name="install_osmand">Instalación d\'OsmAnd</string>
