--- a/OsmAnd-telegram/res/values-be/strings.xml
+++ b/OsmAnd-telegram/res/values-be/strings.xml
@@ -21,7 +21,7 @@
 	<string name="connecting_to_the_internet">Злучэнне з Інтэрнэтам</string>
 	<string name="background_work_description">Змена параметраў аптымізацыі батарэі для стабілізацыі абмену інфармацыяй аб месцазнаходжанні.</string>
 	<string name="background_work">Праца ў фонавым рэжыме</string>
-	<string name="battery_optimization_description">Выключыць аптымізацыю батарэі для OsmAnd Telegram, каб прадухіліць нечаканае выключэнне фонавага рэжыму.</string>
+	<string name="battery_optimization_description">Выключыць аптымізацыю батарэі для OsmAnd Tracker, каб прадухіліць нечаканае выключэнне фонавага рэжыму.</string>
 	<string name="sharing_in_background">Абмен у фонавым рэжыме</string>
 	<string name="go_to_settings">Перайсці ў налады</string>
 	<string name="shared_string_later">Пазней</string>
@@ -39,8 +39,8 @@
 	<string name="add_device">Дадаць прыладу</string>
 	<string name="share_location_as">Падзяліцца месцазнаходжаннем як</string>
 	<string name="live_now_description">Кантакты і групы для абмену месцазнаходжаннем.</string>
-	<string name="logout_from_osmand_telegram_descr">Вы не зможаце падзяліцца сваім месцазнаходжаннем і ўбачыць месцазнаходжанне іншых. Сапраўды выйсці з OsmAnd Telegram\?</string>
-	<string name="logout_from_osmand_telegram">Выйсці з OsmAnd Telegram\?</string>
+	<string name="logout_from_osmand_telegram_descr">Вы не зможаце падзяліцца сваім месцазнаходжаннем і ўбачыць месцазнаходжанне іншых. Сапраўды выйсці з OsmAnd Tracker\?</string>
+	<string name="logout_from_osmand_telegram">Выйсці з OsmAnd Tracker\?</string>
 	<string name="shared_string_name">Імя</string>
 	<string name="by_distance">Па адлегласці</string>
 	<string name="by_name">Па імёнах</string>
@@ -58,13 +58,13 @@
 	<string name="shared_string_group">Група</string>
 	<string name="logout_no_internet_msg">Падлучыцеся да Інтэрнэту, каб карэктна выйсці з Тэлеграм.</string>
 	<string name="shared_string_close">Закрыць</string>
-	<string name="disconnect_from_telegram_desc">Для таго, каб скасаваць абмен месцазнаходжаннем, адкрыйце Тэлеграм, перайдзіце ў Налады → Прыватнасць і бяспека → Сеансы і спыніце сеанс OsmAnd Telegram.</string>
+	<string name="disconnect_from_telegram_desc">Для таго, каб скасаваць абмен месцазнаходжаннем, адкрыйце Тэлеграм, перайдзіце ў Налады → Прыватнасць і бяспека → Сеансы і спыніце сеанс OsmAnd Tracker.</string>
 	<string name="disconnect_from_telegram">Як выключыць абмен месцазнаходжаннем у OsmAnd праз Тэлеграм</string>
 	<string name="logout_help_desc">Як выключыць абмен месцазнаходжаннем у OsmAnd праз Тэлеграм</string>
 	<string name="connected_account">Падлучаны акаўнт</string>
 	<string name="shared_string_account">Рахунак</string>
 	<string name="in_time">у %1$s</string>
-	<string name="osmand_connect_desc">Абраць версію OsmAnd, якую OsmAnd Telegram будзе выкарыстоўваць для адлюстравання пазіцыі.</string>
+	<string name="osmand_connect_desc">Абраць версію OsmAnd, якую OsmAnd Tracker будзе выкарыстоўваць для адлюстравання пазіцыі.</string>
 	<string name="osmand_connect">Злучэнне з OsmAnd</string>
 	<string name="location_history_desc">Схаваць кантакты, якія не перамяшчаліся пэўны час.</string>
 	<string name="location_history">Гісторыя месцазнаходжанняў</string>
@@ -104,7 +104,7 @@
 	<string name="my_location_search_hint">Пошук: група альбо кантакт</string>
 	<string name="start_location_sharing">Падзяліцца месцазнаходжаннем</string>
 	<string name="show_on_map">Паказаць на мапе</string>
-	<string name="app_name">ОsmAnd Telegram</string>
+	<string name="app_name">OsmAnd Online GPS Tracker</string>
 	<string name="phone_number_title">Нумар тэлефона</string>
 	<string name="phone_number_descr">Нумар тэлефона ў міжнародным фармаце</string>
 	<string name="shared_string_password">Пароль</string>
@@ -127,11 +127,11 @@
 	<string name="gps_not_available">Калі ласка, ўключыце \"Месцазнаходжанне\" ў сістэмных наладах</string>
 	<string name="location_service_no_gps_available">Абярыце аднаго пастаўшчыка месцазнаходжання, каб падзяліцца сваім месцазнаходжаннем.</string>
 	<string name="osmand_service">Фонавы рэжым</string>
-	<string name="osmand_service_descr">OsmAnd Telegram працуе ў фонавым рэжыме з выключаным экранам.</string>
+	<string name="osmand_service_descr">OsmAnd Tracker працуе ў фонавым рэжыме з выключаным экранам.</string>
 	<string name="shared_string_distance">Адлегласць</string>
 	<string name="share_location">Падзяліцца месцазнаходжаннем</string>
 	<string name="sharing_location">Абмен данымі аб месцазнаходжанні</string>
-	<string name="process_service">Сэрвіс OsmAnd Telegram</string>
+	<string name="process_service">Сэрвіс OsmAnd Tracker</string>
 	<string name="osmand_logo">Лагатып OsmAnd</string>
 	<string name="install_osmand_dialog_message">Спачатку вам неабходна ўсталяваць бясплатную ці платную версію OsmAnd</string>
 	<string name="install_osmand">Усталяваць OsmAnd</string>
@@ -185,7 +185,6 @@
     <string name="open_in_osmand">Адкрыць у OsmAnd</string>
     <string name="end_date">Дата закрыцця</string>
     <string name="start_date">Час адкрыцця</string>
-    <string name="timeline_description">Уключаць маніторынг для збору данных руху ў фоне.</string>
     <string name="timeline">Храналогія</string>
     <string name="please_update_osmand">Калі ласка, абнавіце OsmAnd каб паглядзець даныя на мапе</string>
     <string name="shared_string_update">Абнавіць</string>
