--- a/OsmAnd-telegram/res/values-da/strings.xml
+++ b/OsmAnd-telegram/res/values-da/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources><string name="background_work_description">Skift indstillinger for batterioptimering, for stabil deling af placering.</string>
 	<string name="background_work">Baggrundstilstand</string>
-	<string name="battery_optimization_description">Sluk for batterioptimering af OsmAnd Telegram, så det ikke pludseligt bliver slukket, når det er i baggrunden.</string>
+	<string name="battery_optimization_description">Sluk for batterioptimering af OsmAnd Tracker, så det ikke pludseligt bliver slukket, når det er i baggrunden.</string>
 	<string name="sharing_in_background">Deling i baggrunden</string>
 	<string name="go_to_settings">Gå til indstillinger</string>
 	<string name="shared_string_later">Senere</string>
@@ -18,8 +18,8 @@
 	<string name="add_device">Tilføj enhed</string>
 	<string name="share_location_as">Del placering som</string>
 	<string name="live_now_description">Kontakter og grupper som der deles placering med.</string>
-	<string name="logout_from_osmand_telegram_descr">Er du sikker på at du vil logge ud af OsmAnd Telegram, så du ikke kan dele din placering eller se placeringen af andre\?</string>
-	<string name="logout_from_osmand_telegram">Log ud af OsmAnd Telegram\?</string>
+	<string name="logout_from_osmand_telegram_descr">Er du sikker på at du vil logge ud af OsmAnd Tracker, så du ikke kan dele din placering eller se placeringen af andre\?</string>
+	<string name="logout_from_osmand_telegram">Log ud af OsmAnd Tracker\?</string>
 	<string name="shared_string_name">Navn</string>
 	<string name="by_distance">Efter afstand</string>
 	<string name="by_name">Efter navn</string>
@@ -37,13 +37,13 @@
 	<string name="shared_string_group">Gruppe</string>
 	<string name="logout_no_internet_msg">Opret forbindelse til Internettet for at logge ud af Telegram.</string>
 	<string name="shared_string_close">Luk</string>
-	<string name="disconnect_from_telegram_desc">"Sådan tilbagekaldes adgang til placeringsdeling. Åbn Telegram, gå til Settings - Privacy and Security - Sessions og afslut OsmAnd Telegram session. "</string>
+	<string name="disconnect_from_telegram_desc">"Sådan tilbagekaldes adgang til placeringsdeling. Åbn Telegram, gå til Settings - Privacy and Security - Sessions og afslut OsmAnd Tracker session. "</string>
 	<string name="disconnect_from_telegram">Hvordan afbrydes OsmAnd placeringsdeling fra Telegram</string>
 	<string name="logout_help_desc">Hvordan afbrydes OsmAnd placeringsdeling fra Telegram</string>
 	<string name="connected_account">Tilsluttet konto</string>
 	<string name="shared_string_account">Konto</string>
 	<string name="in_time">i %1$s</string>
-	<string name="osmand_connect_desc">Vælg den OsmAnd version, som OsmAnd Telegram bruger til vise placeringer på kortet.</string>
+	<string name="osmand_connect_desc">Vælg den OsmAnd version, som OsmAnd Tracker bruger til vise placeringer på kortet.</string>
 	<string name="osmand_connect">Tilslut OsmAnd</string>
 	<string name="location_history_desc">Skjul kontakter, der ikke har bevæget sig i en given tid.</string>
 	<string name="location_history">Placeringshistorik</string>
@@ -82,7 +82,7 @@
 	<string name="my_location_search_hint">Søg: gruppe eller kontakt</string>
 	<string name="start_location_sharing">Del placering</string>
 	<string name="show_on_map">Vis på kort</string>
-	<string name="app_name">OsmAnd Telegram</string>
+	<string name="app_name">OsmAnd Online GPS Tracker</string>
 	<string name="phone_number_title">Telefonnummer</string>
 	<string name="phone_number_descr">Telefonnummer i internationalt format</string>
 	<string name="shared_string_password">Adgangskode</string>
@@ -101,11 +101,11 @@
 	<string name="gps_not_available">Tænd for \"Placering\" i systemindstillinger</string>
 	<string name="location_service_no_gps_available">Vælg en af placeringsudbyderne til at dele placering.</string>
 	<string name="osmand_service">Baggrundstilstand</string>
-	<string name="osmand_service_descr">OsmAnd Telegram kører i baggrunden med skærmen slukket.</string>
+	<string name="osmand_service_descr">OsmAnd Tracker kører i baggrunden med skærmen slukket.</string>
 	<string name="shared_string_distance">Afstand</string>
 	<string name="share_location">Del placering</string>
 	<string name="sharing_location">Deler placering</string>
-	<string name="process_service">OsmAnd Telegram tjeneste</string>
+	<string name="process_service">OsmAnd Tracker tjeneste</string>
 	<string name="osmand_logo">OsmAnd logo</string>
 	<string name="install_osmand_dialog_message">Det er nødvendigt at installere en gratis eller betalt version af OsmAnd</string>
 	<string name="install_osmand">Installer OsmAnd</string>
@@ -196,5 +196,4 @@
     <string name="monitoring_is_enabled">Overvågning er aktiveret</string>
     <string name="monitoring_is_disabled">Overvågning er deaktiveret</string>
     <string name="time_on_the_move">tid i bevægelse</string>
-    <string name="timeline_description">Aktiver overvågning for at indsamle bevægelsesdata i baggrunden.</string>
 </resources>
