--- a/OsmAnd-telegram/res/values-de/strings.xml
+++ b/OsmAnd-telegram/res/values-de/strings.xml
@@ -15,7 +15,7 @@
 	<string name="last_available_location">Letzter verfügbarer Standort</string>
 	<string name="share_location_as">Standort teilen als</string>
 	<string name="live_now_description">Kontakte und Gruppen, die ihren Standort mit Ihnen teilen.</string>
-	<string name="logout_from_osmand_telegram">Aus OsmAnd Telegram abmelden\?</string>
+	<string name="logout_from_osmand_telegram">Aus OsmAnd Tracker abmelden\?</string>
 	<string name="shared_string_name">"Name "</string>
 	<string name="by_distance">Nach Entfernung</string>
 	<string name="by_name">Nach Namen</string>
@@ -34,7 +34,7 @@
 	<string name="connected_account">Verbundenes Konto</string>
 	<string name="shared_string_account">Konto</string>
 	<string name="in_time">"in %1$s "</string>
-	<string name="osmand_connect_desc">Wählen Sie die OsmAnd-Version, die OsmAnd Telegram verwendet, um Positionen anzuzeigen.</string>
+	<string name="osmand_connect_desc">Wählen Sie die OsmAnd-Version, die OsmAnd Tracker verwendet, um Positionen anzuzeigen.</string>
 	<string name="osmand_connect">OsmAnd verbinden</string>
 	<string name="location_history_desc">Blendet Kontakte aus, die sich eine bestimmte Zeit lang nicht bewegt haben.</string>
 	<string name="location_history">Standortverlauf</string>
@@ -63,7 +63,7 @@
 	<string name="set_time">Zeit einstellen</string>
 	<string name="my_location_search_hint">Suche: Gruppe oder Kontakt</string>
 	<string name="show_on_map">Auf Karte anzeigen</string>
-	<string name="app_name">"OsmAnd Telegram "</string>
+	<string name="app_name">"OsmAnd Online GPS Tracker"</string>
 	<string name="phone_number_title">Telefonnummer</string>
 	<string name="phone_number_descr">Telefonnummer in internationalem Format</string>
 	<string name="shared_string_password">Passwort</string>
@@ -80,10 +80,10 @@
 	<string name="no_location_permission">Der App fehlt die Berechtigung, auf Standortdaten zuzugreifen.</string>
 	<string name="gps_not_available">Bitte schalten Sie \"Standort\" in den Systemeinstellungen ein</string>
 	<string name="osmand_service">Hintergrundmodus</string>
-	<string name="osmand_service_descr">OsmAnd Telegram läuft im Hintergrund bei ausgeschaltetem Bildschirm.</string>
+	<string name="osmand_service_descr">OsmAnd Tracker läuft im Hintergrund bei ausgeschaltetem Bildschirm.</string>
 	<string name="shared_string_distance">Distanz</string>
 	<string name="share_location">Standort teilen</string>
-	<string name="process_service">OsmAnd Telegram-Service</string>
+	<string name="process_service">OsmAnd Tracker-Service</string>
 	<string name="osmand_logo">OsmAnd-Logo</string>
 	<string name="install_osmand_dialog_message">Sie müssen zuerst die kostenlose oder kostenpflichtige Version von OsmAnd installieren</string>
 	<string name="install_osmand">OsmAnd installieren</string>
@@ -133,8 +133,8 @@
 	<string name="nm_h">kn/h</string>
 	<string name="last_updated_location">Zuletzt aktualisierter Ort:</string>
 	<string name="not_possible_to_send_to_telegram_chats">Es ist nicht möglich, an Telegram-Chats zu senden:</string>
-	<string name="battery_optimization_description">Schalten Sie die Batterieoptimierung für OsmAnd Telegram aus, damit es nicht plötzlich im Hintergrund ausgeschaltet wird.</string>
-	<string name="logout_from_osmand_telegram_descr">Sind Sie sicher, dass Sie sich von OsmAnd Telegram abmelden möchten, so dass Sie den Standort nicht teilen oder den Standort anderer sehen können\?</string>
+	<string name="battery_optimization_description">Schalten Sie die Batterieoptimierung für OsmAnd Tracker aus, damit es nicht plötzlich im Hintergrund ausgeschaltet wird.</string>
+	<string name="logout_from_osmand_telegram_descr">Sind Sie sicher, dass Sie sich von OsmAnd Tracker abmelden möchten, so dass Sie den Standort nicht teilen oder den Standort anderer sehen können\?</string>
 	<string name="disable_all_sharing_desc">Schaltet die Standortfreigabe für alle ausgewählten Chats aus (%1$d).</string>
 	<string name="disable_all_sharing">Alle Freigaben deaktivieren</string>
 	<string name="disconnect_from_telegram_desc">Um den Zugriff auf die Standortfreigabe zu widerrufen, öffnen Sie Telegram, gehen zu Einstellungen → Datenschutz und Sicherheit → Sitzungen und beenden die OsmAnd Telegram-Sitzung.</string>
@@ -187,7 +187,6 @@
     <string name="open_in_osmand">In OsmAnd öffnen</string>
     <string name="end_date">Endzeit</string>
     <string name="start_date">Startzeit</string>
-    <string name="timeline_description">Überwachung aktivieren, um Bewegungsdaten im Hintergrund zu erfassen.</string>
     <string name="timeline">Zeitachse</string>
     <string name="please_update_osmand">Bitte aktualisieren Sie OsmAnd, um die Daten auf der Karte zu sehen</string>
     <string name="shared_string_update">Aktualisieren</string>
@@ -195,6 +194,6 @@
     <string name="points_size">%1$d Punkte</string>
     <string name="shared_string_date">Datum</string>
     <string name="shared_string_collected">Gesammelt</string>
-    <string name="gps_points">Gps-Punkte</string>
+    <string name="gps_points">GPS-Punkte</string>
     <string name="shared_string_sent">Gesendet</string>
 </resources>
