--- a/OsmAnd-telegram/res/values-he/strings.xml
+++ b/OsmAnd-telegram/res/values-he/strings.xml
@@ -71,7 +71,6 @@
     <string name="open_in_osmand">פתיחה ב־OsmAnd</string>
     <string name="end_date">מועד סיום</string>
     <string name="start_date">מועד התחלה</string>
-    <string name="timeline_description">יש להפעיל ניטור כדי לאסוף נתוני תנועה ברקע.</string>
     <string name="disconnect_from_telegram_desc">כדי לשלול גישה לשיתוף המיקום. יש לפתוח את טלגרם, לגשת להגדרות ← פרטיות ← הפעלות ולסגור את הפעלת הטלגרם של OsmAnd.</string>
     <string name="disconnect_from_telegram">איך לכבות את שיתוף המיקום של OsmAnd מטלגרם</string>
     <string name="logout_help_desc">איך לכבות את שיתוף המיקום של OsmAnd מטלגרם</string>
@@ -115,7 +114,7 @@
     <string name="my_location_search_hint">חיפוש: קבוצה או איש קשר</string>
     <string name="start_location_sharing">שיתוף מיקום</string>
     <string name="show_on_map">הצגה במפה</string>
-    <string name="app_name">OsmAnd טלגרם</string>
+    <string name="app_name">OsmAnd Online GPS Tracker</string>
     <string name="phone_number_title">מספר טלפון</string>
     <string name="phone_number_descr">מספר טלפון בתצורה בינלאומית</string>
     <string name="shared_string_password">ססמה</string>
