--- a/OsmAnd-telegram/res/values-pt-rBR/strings.xml
+++ b/OsmAnd-telegram/res/values-pt-rBR/strings.xml
@@ -26,7 +26,7 @@
     <string name="connecting_to_the_internet">Conectando-se à Internet</string>
     <string name="background_work_description">Altere as configurações de otimização da bateria para estabilizar o compartilhamento de local.</string>
     <string name="background_work">"Funcionamento em segundo plano "</string>
-    <string name="battery_optimization_description">Desative a otimização da bateria do OsmAnd Telegram para que não seja desligado repentinamente quando estiver em segundo plano.</string>
+    <string name="battery_optimization_description">Desative a otimização da bateria do OsmAnd Tracker para que não seja desligado repentinamente quando estiver em segundo plano.</string>
     <string name="sharing_in_background">Compartilhando em segundo plano</string>
     <string name="go_to_settings">Vá para as configurações</string>
     <string name="shared_string_later">Mais tarde</string>
@@ -44,8 +44,8 @@
     <string name="add_device">Adicionar dispositivo</string>
     <string name="share_location_as">Compartilhar localização como</string>
     <string name="live_now_description">Contatos e grupos compartilhando o local para você.</string>
-    <string name="logout_from_osmand_telegram_descr">Tem certeza de que deseja sair do OsmAnd Telegram para que você não possa compartilhar a localização ou ver a localização de outras pessoas\?</string>
-    <string name="logout_from_osmand_telegram">Sair do OsmAnd Telegram\?</string>
+    <string name="logout_from_osmand_telegram_descr">Tem certeza de que deseja sair do OsmAnd Tracker para que você não possa compartilhar a localização ou ver a localização de outras pessoas\?</string>
+    <string name="logout_from_osmand_telegram">Sair do OsmAnd Tracker\?</string>
     <string name="shared_string_name">Nome</string>
     <string name="by_distance">Pela distância</string>
     <string name="by_name">Por nome</string>
@@ -69,7 +69,7 @@
     <string name="connected_account">Conta conectada</string>
     <string name="shared_string_account">Conta</string>
     <string name="in_time">no %1$s</string>
-    <string name="osmand_connect_desc">Escolha a versão OsmAnd que OsmAnd Telegram usa para exibir posições.</string>
+    <string name="osmand_connect_desc">Escolha a versão OsmAnd que OsmAnd Tracker usa para exibir posições.</string>
     <string name="osmand_connect">"Conectar OsmAnd "</string>
     <string name="location_history_desc">Ocultar contatos que não foram movidos em um determinado momento.</string>
     <string name="location_history">Histórico de localização</string>
@@ -109,7 +109,7 @@
     <string name="my_location_search_hint">Pesquisa: Grupo ou contato</string>
     <string name="start_location_sharing">Compartilhar localização</string>
     <string name="show_on_map">Mostrar no mapa</string>
-    <string name="app_name">OsmAnd Telegram</string>
+    <string name="app_name">OsmAnd Online GPS Tracker</string>
     <string name="phone_number_title">Número de telefone</string>
     <string name="phone_number_descr">Número de telefone no formato internacional</string>
     <string name="shared_string_password">Senha</string>
@@ -132,11 +132,11 @@
     <string name="gps_not_available">Por favor, ligue \"Localização\" nas configurações do sistema</string>
     <string name="location_service_no_gps_available">Selecione um dos provedores de localização para compartilhar sua localização.</string>
     <string name="osmand_service">Modo em segundo plano</string>
-    <string name="osmand_service_descr">OsmAnd Telegram é executado em segundo plano com a tela desligada.</string>
+    <string name="osmand_service_descr">OsmAnd Tracker é executado em segundo plano com a tela desligada.</string>
     <string name="shared_string_distance">Distância</string>
     <string name="share_location">Compartilhar localização</string>
     <string name="sharing_location">Compartilhando localização</string>
-    <string name="process_service">Serviço OsmAnd Telegram</string>
+    <string name="process_service">Serviço OsmAnd Tracker</string>
     <string name="osmand_logo">Logotipo do OsmAnd</string>
     <string name="install_osmand_dialog_message">Você precisa instalar a versão gratuita ou paga do OsmAnd primeiro</string>
     <string name="install_osmand">Instalar OsmAnd</string>
@@ -182,13 +182,12 @@
     <string name="open_in_osmand">Aberto no OsmAnd</string>
     <string name="end_date">Data final</string>
     <string name="start_date">Data de início</string>
-    <string name="timeline_description">Ative o monitoramento para coletar dados de movimento em segundo plano.</string>
     <string name="timeline">"Linha do tempo "</string>
     <string name="gps_points_in_buffer">enviado (%1$d em buffer)</string>
     <string name="points_size">"%1$d pontos "</string>
     <string name="shared_string_date">Data</string>
     <string name="shared_string_collected">Coletado</string>
-    <string name="gps_points">Pontos de Gps</string>
+    <string name="gps_points">Pontos de GPS</string>
     <string name="shared_string_sent">"Enviar "</string>
     <string name="please_update_osmand">Por favor, atualize o OsmAnd para ver os dados no mapa</string>
     <string name="shared_string_update">"Atualizar "</string>
