--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
+	<string name="shared_string_ok">OK</string>
+	<string name="timeline_available_for_free_now">Timeline is a feature available now for free.</string>
+	<string name="disable_monitoring">Disable monitoring</string>
+	<string name="location_recording_enabled">Location recording enabled</string>
+	<string name="timeline_description">Enable monitoring to save all locations in history.</string>
+	<string name="app_name_short_online">Online Tracker</string>
+	<string name="app_name_short">OsmAnd Tracker</string>
 	<string name="shared_string_telegram">Telegram</string>
 	<string name="privacy_policy_use_telegram">We use a Telegram (messaging app) to connect people and make it easier for you to communicate with them.</string>
 	<string name="privacy_policy_telegram_client">Telegram open platform and OsmAnd Tracker is one of the customers. Your contacts can use any other Telegram client.</string>
@@ -17,7 +24,7 @@
 	<string name="points_size">%1$d points</string>
 	<string name="shared_string_date">Date</string>
 	<string name="shared_string_collected">Collected</string>
-	<string name="gps_points">Gps points</string>
+	<string name="gps_points">GPS points</string>
 	<string name="shared_string_sent">Sent</string>
 	<string name="monitoring_is_enabled">Monitoring is enabled</string>
 	<string name="monitoring_is_disabled">Monitoring is disabled</string>
@@ -27,7 +34,6 @@
 	<string name="open_in_osmand">Open in OsmAnd</string>
 	<string name="end_date">End date</string>
 	<string name="start_date">Start date</string>
-	<string name="timeline_description">Enable monitoring to collect movement data in the background.</string>
 	<string name="send_location_as">Send location as</string>
 	<string name="send_location_as_descr">Choose how messages with your location will look like.</string>
 	<string name="shared_string_map">Map</string>
@@ -55,7 +61,7 @@
 	<string name="connecting_to_the_internet">Connecting to the Internet</string>
 	<string name="background_work_description">Change battery optimization settings to stabilize location sharing.</string>
 	<string name="background_work">Background work</string>
-	<string name="battery_optimization_description">Turn off battery optimization for OsmAnd Telegram so that it isn\'t suddenly turned off when in the background.</string>
+	<string name="battery_optimization_description">Turn off battery optimization for OsmAnd Tracker so that it isn\'t suddenly turned off when in the background.</string>
 	<string name="sharing_in_background">Sharing in the background</string>
 	<string name="go_to_settings">Go to settings</string>
 	<string name="shared_string_later">Later</string>
@@ -73,8 +79,8 @@
 	<string name="add_device">Add device</string>
 	<string name="share_location_as">Share location as</string>
 	<string name="live_now_description">Contacts and groups sharing location to you.</string>
-	<string name="logout_from_osmand_telegram_descr">Are you sure you want to log out of OsmAnd Telegram so you can\'t share location or see the location of others?</string>
-	<string name="logout_from_osmand_telegram">Log out of OsmAnd Telegram?</string>
+	<string name="logout_from_osmand_telegram_descr">Are you sure you want to log out of OsmAnd Tracker so you can\'t share location or see the location of others?</string>
+	<string name="logout_from_osmand_telegram">Log out of OsmAnd Tracker?</string>
 	<string name="shared_string_name">Name</string>
 	<string name="by_distance">By distance</string>
 	<string name="by_name">By name</string>
@@ -92,13 +98,13 @@
 	<string name="shared_string_group">Group</string>
 	<string name="logout_no_internet_msg">Connect to the Internet to properly log out of Telegram.</string>
 	<string name="shared_string_close">Close</string>
-	<string name="disconnect_from_telegram_desc">To revoke location sharing access. Open Telegram, go to Settings → Privacy and Security → Sessions, and terminate the OsmAnd Telegram session.</string>
+	<string name="disconnect_from_telegram_desc">To revoke location sharing access. Open Telegram, go to Settings → Privacy and Security → Sessions, and terminate the OsmAnd Tracker session.</string>
 	<string name="disconnect_from_telegram">How to turn off OsmAnd Location Sharing from Telegram</string>
 	<string name="logout_help_desc">How to turn off OsmAnd Location Sharing from Telegram</string>
 	<string name="connected_account">Connected account</string>
 	<string name="shared_string_account">Account</string>
 	<string name="in_time">in %1$s</string>
-	<string name="osmand_connect_desc">Choose the OsmAnd version OsmAnd Telegram uses to display positions.</string>
+	<string name="osmand_connect_desc">Choose the OsmAnd version OsmAnd Tracker uses to display positions.</string>
 	<string name="osmand_connect">OsmAnd connect</string>
 	<string name="location_history_desc">Hide contacts that have not moved in a given time.</string>
 	<string name="location_history">Location history</string>
@@ -139,7 +145,7 @@
 	<string name="my_location_search_hint">Search: Group or contact</string>
 	<string name="start_location_sharing">Share location</string>
 	<string name="show_on_map">Show on map</string>
-	<string name="app_name">OsmAnd Telegram</string>
+	<string name="app_name">OsmAnd Online GPS Tracker</string>
 	<string name="phone_number_title">Phone number</string>
 	<string name="phone_number_descr">Phone number in international format</string>
 	<string name="shared_string_password">Password</string>
@@ -162,11 +168,11 @@
 	<string name="gps_not_available">Please turn on \"Location\" in the system settings</string>
 	<string name="location_service_no_gps_available">Select one of the location providers to share your location.</string>
 	<string name="osmand_service">Background mode</string>
-	<string name="osmand_service_descr">OsmAnd Telegram runs in the background with the screen off.</string>
+	<string name="osmand_service_descr">OsmAnd Tracker runs in the background with the screen off.</string>
 	<string name="shared_string_distance">Distance</string>
 	<string name="share_location">Share location</string>
 	<string name="sharing_location">Sharing location</string>
-	<string name="process_service">OsmAnd Telegram service</string>
+	<string name="process_service">OsmAnd Tracker service</string>
 	<string name="osmand_logo">OsmAnd logo</string>
 	<string name="install_osmand_dialog_message">You need to install the free or paid version of OsmAnd first</string>
 	<string name="install_osmand">Install OsmAnd</string>
