Added previous route card

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="previous_route">Previous route</string>
 	<string name="add_home">Add home</string>
 	<string name="add_work">Add work</string>
 	<string name="work_button">Work</string>
