Reverted to intermediate destination/s, one ! avoided

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="simulate_navigation">Simulate navigation</string>
     <string name="choose_track_file_to_follow">Choose track file to follow</string>
     <string name="voice_announcements">Voice announcements</string>
-    <string name="intermediate_destinations">Intermediate waypoints: %1$s</string>
+    <string name="intermediate_destinations">Intermediate destinations: %1$s</string>
     <string name="arrive_at_time">Arrive at %1$s</string>
     <string name="osm_live_subscriptions">Subscriptions</string>
     <string name="powered_by_osmand">By OsmAnd</string>
@@ -42,7 +42,7 @@
     <string name="osm_live_payment_annual_title">Annually</string>
     <string name="osm_live_payment_month_cost_descr">%1$s / month</string>
     <string name="osm_live_payment_month_cost_descr_ex">%1$.2f %2$s / month</string>
-    <string name="osm_live_payment_discount_descr">Save %1$s!</string>
+    <string name="osm_live_payment_discount_descr">Save %1$s.</string>
 	<string name="osm_live_payment_current_subscription">Current subscription</string>
     <string name="osm_live_payment_renews_monthly">Renews monthly</string>
     <string name="osm_live_payment_renews_quarterly">Renews quarterly</string>
@@ -460,9 +460,9 @@
     <string name="quick_action_add_destination">Add destination</string>
     <string name="quick_action_replace_destination">Replace destination</string>
     <string name="quick_action_add_first_intermediate">Add first intermediate</string>
-    <string name="quick_action_add_destination_desc">Tapping this action button makes the screen center the route destination, any previously selected destination becomes the last intermediate waypoint.</string>
+    <string name="quick_action_add_destination_desc">Tapping this action button makes the screen center the route destination, any previously selected destination becomes the last intermediate destination.</string>
     <string name="quick_action_replace_destination_desc">Tapping this action button makes the screen center the new route destination, replacing the previously selected destination (if any).</string>
-    <string name="quick_action_add_first_intermediate_desc">Tapping this action button makes the screen center the first intermediate waypoint.</string>
+    <string name="quick_action_add_first_intermediate_desc">Tapping this action button makes the screen center the first intermediate destination.</string>
     <string name="no_overlay">No overlay</string>
     <string name="no_underlay">No underlay</string>
     <string name="subscribe_email_error">Error</string>
@@ -1592,7 +1592,7 @@
     <string name="animate_routing_route_not_calculated">Please calculate the route first</string>
     <string name="animate_routing_route">Simulate using calculated route</string>
     <string name="animate_routing_gpx">Simulate using GPX track</string>
-    <string name="route_is_too_long_v2">Please add intermediate waypoints if no path is found for this long route within 10 mins.</string>
+    <string name="route_is_too_long_v2">Please add intermediate destinations if no path is found for this long route within 10 mins.</string>
     <string name="auto_zoom_none">No auto zoom</string>
     <string name="auto_zoom_close">To close-up</string>
     <string name="auto_zoom_far">To mid-range</string>
@@ -1632,9 +1632,9 @@
     <string name="speak_cameras">Speed cameras</string>
     <string name="speak_traffic_warnings">Traffic warnings</string>
     <string name="osb_author_or_password_not_specified">Please specify OSM user and password in \'Settings\'</string>
-    <string name="clear_intermediate_points">Clear intermediate waypoints</string>
-    <string name="keep_intermediate_points">Keep intermediate waypoints</string>
-    <string name="new_directions_point_dialog">You already have intermediate waypoints set.</string>
+    <string name="clear_intermediate_points">Clear intermediate destinations</string>
+    <string name="keep_intermediate_points">Keep intermediate destinations</string>
+    <string name="new_directions_point_dialog">You already have intermediate destinations set.</string>
     <string name="context_menu_item_directions_to">Directions to</string>
     <string name="context_menu_item_directions_from">Directions from</string>
     <string name="route_descr_map_location">Map: </string>
@@ -1651,7 +1651,7 @@
     <string name="context_menu_item_destination_point">Set as destination</string>
     <string name="please_select_address">Select city or street first</string>
     <string name="search_street_in_neighborhood_cities">Search for street in neighborhood cities</string>
-    <string name="intermediate_items_sort_return">Optimized order of intermediate waypoints en-route to the destination.</string>
+    <string name="intermediate_items_sort_return">Optimized order of intermediate destinations en-route to the destination.</string>
     <string name="intermediate_items_sort_by_distance">Sort door-to-door</string>
     <string name="local_osm_changes_backup_successful">OSM change file was generated %1$s</string>
     <string name="local_osm_changes_backup_failed">Could not back up OSM changes</string>
@@ -1714,7 +1714,7 @@
     <string name="local_indexes_cat_srtm">Contour lines</string>
     <string name="local_indexes_cat_av">Audio/Video data</string>
     <string name="stop_routing_confirm">Are you sure you want to stop the navigation?</string>
-    <string name="clear_dest_confirm">Are you sure you want to clear your destination (and intermediate waypoints)?</string>
+    <string name="clear_dest_confirm">Are you sure you want to clear your destination (and intermediate destinations)?</string>
     <string name="precise_routing_mode_descr">Calculate precise routes without glitches. Still distance-limited and slow.</string>
     <string name="precise_routing_mode">Precise routing (alpha)</string>
     <string name="recording_context_menu_show">Show</string>
@@ -1792,18 +1792,18 @@
     <string name="no_route">No route</string>
     <string name="delete_target_point">Remove destination</string>
     <string name="target_point">Destination %1$s</string>
-    <string name="intermediate_point">Intermediate waypoint %1$s</string>
-    <string name="context_menu_item_last_intermediate_point">Add as last intermediate waypoint</string>
-    <string name="context_menu_item_first_intermediate_point">Add as first intermediate waypoint</string>
-    <string name="add_as_last_destination_point">Add as last intermediate waypoint</string>
-    <string name="add_as_first_destination_point">Add as first intermediate waypoint</string>
+    <string name="intermediate_point">Intermediate destination %1$s</string>
+    <string name="context_menu_item_last_intermediate_point">Add as last intermediate destination</string>
+    <string name="context_menu_item_first_intermediate_point">Add as first intermediate destination</string>
+    <string name="add_as_last_destination_point">Add as last intermediate destination</string>
+    <string name="add_as_first_destination_point">Add as first intermediate destination</string>
     <string name="replace_destination_point">Replace the destination</string>
     <string name="new_destination_point_dialog">You have already set a destination:</string>
     <string name="shared_string_target_points">Destinations</string>
-    <string name="intermediate_point_too_far">Intermediate waypoint %1$s is too far from the nearest road.</string>
-    <string name="arrived_at_intermediate_point">Intermediate waypoint reached</string>
-    <string name="context_menu_item_intermediate_point">Add as intermediate waypoint</string>
-    <string name="map_widget_intermediate_distance">Intermediate waypoint</string>
+    <string name="intermediate_point_too_far">Intermediate destination %1$s is too far from the nearest road.</string>
+    <string name="arrived_at_intermediate_point">Intermediate destination reached</string>
+    <string name="context_menu_item_intermediate_point">Add as intermediate destination</string>
+    <string name="map_widget_intermediate_distance">Intermediate destination</string>
     <string name="map_widget_intermediate_time">Intermediate time</string>
     <string name="ending_point_too_far">Ending point too far from nearest road.</string>
     <string name="add_tag">Add Tag</string>
